# djangocon-us-2025

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pydocstyle  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pgadmin-servers.json.example  pyproject.toml
apps/accounts/: tests.py  urls.py  views.py
core/: settings.py  urls.py
patient/: admin.py  forms.py  models.py  urls.py  views.py
patient/migrations/: 0001_initial.py  0002_alter_person_pronouns.py
patient/tests/: test_models.py
patient_risk/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
patient_risk/migrations/: 0001_initial.py  0002_alter_patientriskassessment_options_and_more.py  0003_patientriskassessment_contraindication_flags_and_more.py  0004_alter_patientriskassessment_chads_score_and_more.py  (+1 more)
presentation/: README.md  index.html  justfile  presentation-outline.md  slide-01-title.html  slide-02-intro-ryan.html  slide-03-cross-team-confusion.html  slide-04-real-cost.html  slide-05-current-state.html  slide-06-documentation-gap.html  slide-07-help-text-limitation.html  slide-08-different-audiences.html  slide-09-help-text-falls-short.html  slide-10-django-db-comment.html  slide-11-what-this-generates.html  slide-12-before-mystery-fields.html  slide-13-after-self-documenting.html  slide-14-hasbled-field.html  slide-15-qrisk3-field.html  slide-16-complex-json-example.html  slide-17-table-level-docs.html  slide-18-the-migration.html  slide-19-both-features-together.html  slide-20-dba-view.html  slide-21-start-today.html  slide-22-resources.html  slide-22-thank-you.html  slide-23-resources.html  slide-template.html  slides.js  styles.css
(+151 files in other folders)
