[project]
name = "core"
version = "0.1.0"
description = "Django healthcare application"
authors = [
    {name = "Ryan Cheley", email = "rcheley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2,<5.3",
    "psycopg[binary]>=3.2.0",
    "django-environ>=0.11.0",
    "Pillow>=10.4.0",
    "django-extensions>=3.2.0",
    "whitenoise>=6.7.0",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "factory-boy>=3.3.0",
    "coverage>=7.5.0",
    "pydocstyle>=6.3.0",
    "ty>=0.0.1a14",
    "zizmor>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DJ"]
ignore = ["E203", "E501", "S104", "F401"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
"*/tests/*" = ["S101"]
"*/settings.py" = ["S104", "F401"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = ["*/migrations/*", "*/tests/*", "*/venv/*", "*/virtualenv/*"]

[tool.coverage.report]
precision = 2

[tool.pydocstyle]
ignore = ["D203"]

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = [
    "qrcode>=8.2",
    "ruff>=0.12.4",
]
